RESOLVED FIXED216580
CRASH: Exception thrown from -[AVContentKeyRequest makeStreamingContentKeyRequestDataForApp:contentIdentifier:options:completionHandler:]
https://bugs.webkit.org/show_bug.cgi?id=216580
Summary CRASH: Exception thrown from -[AVContentKeyRequest makeStreamingContentKeyReq...
Jer Noble
Reported 2020-09-15 13:52:22 PDT
CRASH: Exception thrown from -[AVContentKeyRequest makeStreamingContentKeyRequestDataForApp:contentIdentifier:options:completionHandler:]
Attachments
Patch (10.26 KB, patch)
2020-09-15 13:55 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-09-15 13:52:54 PDT
Radar WebKit Bug Importer
Comment 2 2020-09-15 13:53:05 PDT
Jer Noble
Comment 3 2020-09-15 13:55:09 PDT
Jer Noble
Comment 4 2020-09-15 15:11:09 PDT
EWS
Comment 5 2020-09-15 15:25:22 PDT
Committed r267106: <https://trac.webkit.org/changeset/267106> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408858 [details].
Note You need to log in before you can comment on or make changes to this bug.